# arangodantic

./: .pre-commit-config.yaml  CHANGELOG.md  pyproject.toml
.github/workflows/: tests.yaml
arangodantic/: __init__.py  models.py
arangodantic/backends/: ShylockAsyncerArangoDBBackend.py
arangodantic/tests/: conftest.py  test_model.py
examples/: graph_example.py  readme_example.py
