[project]
name = "arangodantic"
version = "0.4.4"
description = "Database models for ArangoDB using Pydantic V2 base models."
authors = [
    { name = "Digital Living International Ltd" },
    { name = "dasTholo", email = "kaitholo@gmail.com" }
]
dependencies = [
    "python-arango>=8.2.1",
    "pydantic>=2.11.7",
    "orjson>=3.10.18",
    "shylock>=1.2.1",
    "asyncer>=0.0.8",
    "inflection>=0.5.1",
]

readme = "README.md"
requires-python = ">= 3.11"
license = "BSD-2-Clause"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["arangodantic"]
